tests/expected_output/assign_pointer_to_int/000001-clang-16.0-x86_64-pc-linux-gnu.txt
assign_pointer_to_int.c:4:7: error: incompatible pointer to integer conversion assigning to 'int' from 'int *'; remove & [-Wint-conversion]
    a = &a;
      ^ ~~
dcc explanation: you are attempting to assign &a which is not an int to an int variable.
